vlib/v/checker/tests/import_symbol_const_private_err.vv
import v.scanner

fn main() {
  println(scanner.single_quote)
}
